Re-introduce setAccessible call to OperatingSystemMetricSet and improve tests to read probe values during testing.