@@ -1024,10 +1024,12 @@
                             <trimStackTrace>false</trimStackTrace>
                             <!--
                             The jdk.xml.internal package export is added to workaround Powermock issue https://github.com/powermock/powermock/issues/905 in tests.
+                            The package opening from jdk.management module is added to allow reflection access to OS level metrics in OperatingSystemMetricSet class.
                              -->
                             <argLine>
                                 ${vmHeapSettings}
                                 --add-exports java.xml/jdk.xml.internal=ALL-UNNAMED
+                                --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
                                 -Dhazelcast.phone.home.enabled=false
                                 -Dhazelcast.mancenter.enabled=false
                                 -Dhazelcast.test.use.network=false
